Added more properties to api.js

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,9 @@ services:
     working_dir: /programming-proficiency-test
     volumes:
       - ${PWD}:/programming-proficiency-test
+  frontend:
+    build: ./resources
+    container_name: vue_frontend
+    ports:
+      - 8080:8080
+    command: "npm run dev"
