--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Homming\\ProficiencyTest\\": "src/"
+            "App\\": "src/"
         }
     },
     "autoload-dev": {
