--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "serve": "node_modules/.bin/vue-cli-service serve resources/main.js",
+    "build": "node_modules/.bin/vue-cli-service build resources/main.js",
+    "test:unit": "node_modules/.bin/vue-cli-service test:unit",
+    "lint": "node_modules/.bin/vue-cli-service lint resources"
   },
   "dependencies": {
     "core-js": "^3.6.5",
