--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.6",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^9.8.8",
     "babel-eslint": "^10.1.0",
     "chokidar": "^3.5.2",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^9.9.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.6",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue-template-compiler": "^2.6.11"
   }
 }
